# shipdeo

./: LICENSE  pyproject.toml  requirements.txt
shipdeo/: auth.py  dto.py  shipping.py
