[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipdeo"
version = "0.0.8"
authors = [
  { name="Ramdani", email="ramdani@sopwer.net" },
]
description = "A Wrapper Shipdeo Service - 3PL Indonesia Aggregator "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xhijack/shipdeo"
"Bug Tracker" = "https://github.com/xhijack/shipdeo/issues"